# swarm-node

./: .gitignore  install  run
.run/: skymap-sens-arr.run.xml  skymap-serv.run.xml  skymap.run.xml
backend/: _gen_openapi.py  api.py  build.sh  deb_list.txt  deps.sh  install  ipc.py  main.py  models.py  openapi.json  processes.py  required-debs.txt  requirements-dev.txt  requirements.dev.txt  requirements.txt  server.py  trace.sh  util.py
backend/deploy/iso/: build.sh  post_install.sh  preseed.cfg
backend/deploy/iso/isolinux/: gtk.cfg
backend/deploy/service/: cloudflare.go  go.mod  go.sum  main.go  swarmnode.service
backend/deploy/tunnels/: main.tf  outputs.tf  variables.tf
backend/machine/: machine.py  main.py  webrtc.py
backend/src/: install  ipc.py  main.py  models.py  processes.py  server.py  util.py
backend/src/machine/: main.py  rp2040.py
backend/src/machine/rp2040/: .clang-format  .gitignore  CMakeLists.txt
backend/src/machine/rp2040/src/: CMakeLists.txt  gpi.h  i2c.h  ina226.h  io.h  main.c  servo.h  spi.h
backend_iso/: build.sh  post_install.sh  preseed.cfg
backend_iso/grub/: grub.cfg
backend_iso/isolinux/: isolinux.cfg
client/: .env  data_transport.py  depth_camera.py  device_instructions.json5  device_state.json5  device_state.yml  main.py  requirements.txt
client/scripts/stereo_calibration/: calibration.py  images.py
client/static/: camera_intrinsic_properties1.yml
control/: .eslintignore  package-lock.json  package.json  quasar.config.js  tsconfig.json
control/lib/connection/: main.ts
control/lib/webrtc/: main.ts
control/shared/: device.json
control/shared/specs/db_documents/: control.d.ts  device.d.ts
control/src/: App.vue  main.js
database/: .terraform.lock.hcl  Dockerfile  build.sh  cloudflare.pem  deploy.sh  main.tf  startup.sh.tpl
database/docker/: couchdb.ini
database/registry/: .device.json  .env  .env.example  registry.py  registry.yml  requirements.txt
device/: device_instructions.yml  main.py  requirements.txt
device/scripts/stereo_calibration/: images.py
device/shared/: control.json
device/shared/specs/db_documents/: control.py  device.py
embedded/rp2040/: CMakeLists.txt  README.md
embedded/rp2040/board_defs/: rp2040_december.h
embedded/rp2040/src/: CMakeLists.txt  cobs.h  io.h  main.c  servo.h
frontend/: .eslintrc.js  gen_openapi.py  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  models.ts  util.ts  vite-env.d.ts
frontend/src/components/: ControlPanel.vue  InfoPane.vue  Stream.vue  StreamSettings.vue
frontend/src/components/ControlPanel/: AudioDeviceWidget.vue  ControlPanel.vue  StreamSettings.vue  store.ts
frontend/src/components/control_panel/: AudioDeviceWidget.vue  StreamSettings.vue  store.ts
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/sdk/: Client.ts  index.ts
frontend/src/sdk/models/: AudioDevice.ts  Tracks.ts  (+20 more)
frontend/src/store/: devices.ts  stream.ts
server/: Dockerfile  Dockerfile(does_not_work)
server/.run/: go build webrtc-proxy.run.xml  skymap sensor.run.xml  skymap server.run.xml
server/backend/: pyproject.toml  readme.md  required-debs.txt  requirements.txt  trace.sh
server/backend/src/: client.py  ipc.py  kernel.py  main.py  models.py  processes.py  server.py  util.py
server/backend/src/kernels/: utils.py
server/backend/src/kernels/december/: main.py
server/backend/src/kernels/skymap/: common.py
server/backend/src/kernels/skymap/sensor_array/: depth_encoding.py  depth_encoding_lookup_tables.npz  main.py  sensors.py  triangle_depth_encoding_lookup_tables.npz
server/backend/src/kernels/skymap/server/: main.py  reconstruction.py  reconstructor_d.py
server/backend/src/machine/: main.py  rp2040.py
server/frontend/: gen_openapi.py  package-lock.json  tsconfig.json  vite.config.ts
server/kernels/december/: main.py
server/kernels/skymap/sensor_array/: depth_encoding.py  pyproject.toml
server/kernels/skymap/server/: pyproject.toml  reconstructor_d.py
server/networking/: build_proto.sh  cobs.go  go.mod  go.sum  kernel.go  kernel_test.go  main.go  main_test.go  networking.proto  scratch.sh  webrtc.go  webrtc_test.go
server/networking/ipc/: networking.pb.go
server/networking/python_sdk/: __init__.py  main.py  networking_pb2.py  networking_pb2.pyi  pyproject.toml  test_kernel.py
server/networking/python_sdk/src/networking_python_sdk/: __init__.py  sdk.py
server/networking/test_kernel/: pyproject.toml  test_kernel.py
server/nodes/december/: pyproject.toml
server/nodes/skymap/common/: pyproject.toml
server/nodes/skymap/common/src/swarmnode_skymap_common/: __init__.py  depth_encoding.py  gps.py  turn.py
server/nodes/skymap/sensor_array/: apt-install.sh  depth_encoding.py  leapseconds.py  main.py  pyproject.toml  sensors.py  test_graph.py
server/nodes/skymap/server/: gps_cartesian.py  integrator.py  main.py  pyproject.toml  reconstructor_d.py  tui.py
server/nodes/skymap/server/scripts/: read_pcd.py  realignment.py  replay_depth.py  replay_video.py
server/utils/rp2040/: generate_request.py  pyproject.toml  rp2040.py
server/webrtc-proxy/: .gitignore  build.sh  go.mod  go.sum  interfaces.go  main.go  scratch.sh  webrtc.go  webrtc_test.go
server/webrtc-proxy/grpc/: build_proto.sh  networking.proto
server/webrtc-proxy/grpc/python/: pyproject.toml
server/webrtc-proxy/grpc/python/src/webrtc_proxy/: __init__.py  apt-install.sh  async_gst.py  gst_tools.py  gst_utils.py  networking_pb2.py  networking_pb2.pyi  networking_pb2_grpc.py  sdk.py
server/webrtc-proxy/testdlhe7gt2jkx4pvaatqhksup6olft3ube6u4huiwrjttgsexsmhyd.onion/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
shared/: build.py  requirements.txt
shared/constants/: webrtc.json
stereo_calibration/: calibration.py  depth_camera.py  requirements.txt
tunnels/: .terraform.lock.hcl
ui/: .eslintrc.js  package-lock.json  package.json  postcss.config.js  quasar.config.js  tsconfig.json
ui/libs/: main.ts
ui/src/components/: DeviceSelector.vue
ui/src/layouts/: MainLayout.vue
ui/src/pages/: ErrorNotFound.vue
(+11 files in other folders)
