[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-node"
description = "middleware stack for real time remote operation of connected devices"
version = "0.0.7"
requires-python = ">=3.11"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aioice",
    "aiortc==1.9.0",
    "v4l2py==2.3.0",
    "pulsectl_asyncio==1.2.0",
    "litestar==2.8.3",
    "uvicorn[standard]==0.23.2",
    "uvloop==0.19.0",
    "pulsectl==23.5.2",
    "msgspec==0.18.6",
    "pyudev==0.24.3",
    "psutil==5.9.8",
    "pyserial==3.5",
    "pyav @ https://files.pythonhosted.org/packages/fe/79/6d3647c4877044b5f0a3b6691e0349e2a7207162482546ec4ca6996a6adb/pyav-12.3.0.tar.gz"
]
[project.optional-dependencies]
build = ["cx-Freeze==7.2.0"]

[tool.setuptools.package-data]
frontend_dist = ["**"]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "console" }
]

[tool.cxfreeze.build_exe]
zip_includes = ["src/frontend_dist"]
no_compress = true # cannot serve static assets correctly if compressed
packages = ["litestar", "uvicorn"]

[project.scripts]
swarmnode-init = "main:main"