[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-node"
description = "middleware stack for real time remote operation of connected devices"
version = "0.0.7"
requires-python = ">=3.11"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aioice",
    "aiortc==1.9.0",
    "v4l2py==2.3.0",
    "pulsectl_asyncio==1.2.2",
    "litestar==2.13.0",
    "uvicorn[standard]==0.32.1",
    "uvloop==0.21.0",
    "pulsectl==23.5.2",
    "msgspec==0.18.6",
    "pyudev==0.24.3",
    "psutil==5.9.8",
    "pyserial==3.5",
    "pyav==12.3.0",
    "httpx==0.27.2"
]


[dependency-groups]
build = ["cx-Freeze==7.2.0"]
skymap = [
    "numpy~=1.0",
    "opencv-python==4.10.0.84",
    "pyrealsense2==2.55.1.6486",
    "pygnssutils==1.1.8",
    "pynmeagps==1.0.43",
    "google-crc32c>=1",
    "numba~=0.60.0",
]
skymapserv = [
    "open3d==0.18.0"
]

[tool.setuptools.package-data]
frontend_dist = ["**"]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "console" }
]

[tool.cxfreeze.build_exe]
zip_includes = ["src/frontend_dist"]
no_compress = true # can't serve static assets correctly if compressed
packages = ["litestar", "uvicorn"]

[project.scripts]
swarmnode-init = "main:main"