[project]
name = "networking-python-sdk"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "protobuf~=5.29.3",
    "cobs~=1.2.1",
    "pycairo~=1.27.0",
    "PyGObject~=3.50.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["test-kernel"]
