[project]
name = "networking-python-sdk"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "protobuf~=5.29.3",
    "cobs~=1.2.1",
    "pycairo~=1.27.0",
    "PyGObject~=3.50.0",
    "gstreamer-python",
    "msgspec>=0.19.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
gstreamer-python = { git = "https://github.com/jackersson/gstreamer-python.git", rev = "c8d4e04e1cdeb3b284641b981afcf304f50480db" }
