[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "december"
description = "middleware stack for real time remote operation of connected devices"
version = "0.0.7"
requires-python = "==3.13.*"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "v4l2py==2.3.0",
    "pulsectl_asyncio==1.2.2",
    "uvloop==0.21.0",
    "pulsectl==23.5.2",
    "msgspec~=0.19.0",
    "pyudev==0.24.3",
    "psutil==5.9.8",
    "pyserial==3.5",
    "httpx==0.27.2"
]

[tool.setuptools.package-data]
frontend_dist = ["**"]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "console" }
]

[tool.cxfreeze.build_exe]
zip_includes = ["src/frontend_dist"]
no_compress = true # can't serve static assets correctly if compressed

[project.scripts]
swarmnode-init = "main:main"