[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-node"
description = "middleware stack for real time remote operation of connected devices"
version = "0.0.7"
requires-python = ">=3.11"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy~=1.0",
    "uvloop==0.21.0",
    "msgspec~=0.19.0",
    "open3d==0.18.0",
]

[tool.setuptools.package-data]
frontend_dist = ["**"]

[tool.cxfreeze]
executables = [
    { script = "src/main.py", base = "console" }
]

[tool.cxfreeze.build_exe]
zip_includes = ["src/frontend_dist"]
no_compress = true # can't serve static assets correctly if compressed

[project.scripts]
swarmnode-init = "main:main"