[project]
name = "swarmnode_skymap_common"
version = "0.0.7"
requires-python = ">=3.11"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy~=2.0",
    "msgspec~=0.19.0",
]

[tool.uv.sources]
webrtc_proxy = { path = "../../../webrtc-proxy/grpc/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"