[project]
name = "swarmnode-skymap-server"
version = "0.0.7"
requires-python = ">=3.11"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy~=2.0",
    "uvloop==0.21.0",
    "msgspec~=0.19.0",
    "open3d==0.18.0",
    "webrtc-proxy",
    "swarmnode-skymap-common",
    "opencv-python>=4.11.0.86",
]

[tool.uv.sources]
webrtc-proxy = { path = "../../../webrtc-proxy/grpc/python", editable = true }
swarmnode-skymap-common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
